--- a/HotelSystem/src/main/resources/application.yml
+++ b/HotelSystem/src/main/resources/application.yml
@@ -1,25 +1,22 @@
 server:
   port: 8080
-  servlet:
-    context-path: /api
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hotel_system?useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/hotel_system?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
     username: root
-    password: Hl369369  # 请替换为您的MySQL密码
+    password: Hl369369
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create  # 第一次可以设为create，之后改为update
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
-
 
 logging:
   level:
-    com.smartstay: DEBUG
+    com.hotelsystem: DEBUG
