--- a/HotelSystem/src/main/resources/application-admin.yml
+++ b/HotelSystem/src/main/resources/application-admin.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/hotel_system?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
     username: root
-    password: Hl369369
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
